quick fix overlap in funding news card, fix card border and change card count in layout

--- a/src/app/portal/components/news/news-card/news-card.component.scss
+++ b/src/app/portal/components/news/news-card/news-card.component.scss
@@ -106,6 +106,14 @@ app-news-card {
     }
   }
 
+  .funding-call-news {
+    .mat-card-header .mat-card-title {
+      &.high-header {
+        min-height: 55px;
+      }
+    }
+  }
+
   .mat-card-header-text {
     display: flex;
     flex-direction: column;
